@@ -58,6 +58,7 @@ ENCODING=base64
 MIMENCODE=mimencode
 TIFF2PDF=bin/tiff2pdf
 TTYCMD=tty
+CHARSET=us-ascii
 
 . etc/setup.cache
 
@@ -175,8 +176,8 @@ if [ -f $FILE ]; then
 	 echo "Subject: Facsimile retrieved from $SENDER";   
 	 echo ""
 	 echo "--$MIMEBOUNDARY"
-	 echo "Content-Type: text/plain; charset=us-ascii"
-	 echo "Content-Transfer-Encoding: 7bit"
+	 echo "Content-Type: text/plain; charset=$CHARSET"
+	 echo "Content-Transfer-Encoding: quoted-printable"
 	 echo ""
 	 echo "$FILE (ftp://$HOSTNAME:$PORT/$FILE):"; $INFO -n $FILE
 	 echo "ReceivedOn: $DEVICE"
