@@ -2,6 +2,7 @@
 
 Changelog
 
+* add CHARSET config option for mailing scripts (21 Feb 2006)
 * use To-Company and To-Name coverpage entries in the notification
   message if they are available to use (21 Feb 2006)
 * add support for libtiff-3.8 (31 Jan 2006)
